Changes from jTDS 0.9.1
=======================

01/10/2005 - Alin Sinpalean
 o Optimization in Support.substituteParamMarkers(): a StringBuffer is used for
   converting parameter numbers to strings, in order to avoid unnecessary
   object creation.
 o Corrected a problem in TdsCore where the inBatch flag was set incorrectly
   causing sp_executesql to be used for all parameterized queries.
 o Added a specific error message for the case when an output parameter value
   is accessed without registerOutParameter() being called first.

01/05/2005 - Alin Sinpalean
 o Applied patch [1096296] DatabaseMetaData.getTypeInfo() ordering, submitted
   by David Eaves.
 o Applied Mike's fix to bug [1096086] Zero length streams generate null
   values.

01/04/2005 - Alin Sinpalean
 o Applied patch [1089891] Adding SSL, from Rob Worsnop. Wasn't able to test
   whether SSL really works (because I was not able to configure SQL Server to
   handle it) but with a few minor changes at least the old functionality is
   not affected.
 o Applied patch [1095057] Positioned updates and improved Sybase cursors.
 o Applied Mike's fix to bug [1094621] Decimal conversion error.
 o Some performance improvements.

12/21/2004 - Alin Sinpalean
 o Included the SSO patch in the build.

12/20/2004 - Alin Sinpalean
 o Fixed bug [1086477] RETURN_GENERATED_KEYS on select returns 1 row.
 o Applied patch [1088293] Simplified multi threaded execution with a few minor
   corrections and modifications (including optimized, single request, batch
   updating).
 o DDL statements no longer return update counts. This should make jTDS more
   compatible with other drivers and the spec.

12/19/2004 - Alin Sinpalean
 o Fixed bug [1082986] prepareSQL=3 Does Not Function (caused by the separation
   of input and output values).
 o Applied Mike's fix for bug [1086494] DatabaseMetaData.getProcedureColumns
   broken on Sybase.
 o Fixed bug [1087057] Connection is closed during XA Transaction. Also added